sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:21: error: not found: value swapped
   	 } while(swapped)
                 ^